Alter auf einfachere Parameteruebergabe geaendert