@@ -23,13 +23,15 @@ import java.util.HashMap;
 import cTree.CElement;
 import cTree.CTComparator;
 import cTree.CTimesRow;
+import cTree.adapter.C_Event;
 
 public class CA_TimesRow_Sort extends CAlter {
 
     @Override
-    public CElement change(final ArrayList<CElement> els) {
-        if (els.get(0) instanceof CTimesRow) {
-            final CTimesRow old = (CTimesRow) els.get(0);
+    public CElement doIt() {
+        final CElement first = this.getEvent().getFirst();
+        if (first instanceof CTimesRow) {
+            final CTimesRow old = (CTimesRow) first;
             final ArrayList<CElement> prodMembers = old.getMemberList();
             Collections.sort(prodMembers, new CTComparator());
             if (prodMembers.size() > 0) {
@@ -45,11 +47,10 @@ public class CA_TimesRow_Sort extends CAlter {
             }
             final CTimesRow newRow = CTimesRow.createRow(prodMembers);
             newRow.correctInternalPraefixesAndRolle();
-            els.get(0).getParent().replaceChild(newRow, els.get(0), true,
-                    true);
+            first.getParent().replaceChild(newRow, first, true, true);
             return newRow;
         } else {
-            return els.get(0);
+            return first;
         }
     }
 
@@ -59,7 +60,9 @@ public class CA_TimesRow_Sort extends CAlter {
     }
 
     @Override
-    public boolean check(final ArrayList<CElement> els) {
+    public boolean canDo(final C_Event event) {
+        this.setEvent(event);
+        final ArrayList<CElement> els = event.getSelection();
         return (els.size() > 0 && (els.get(0) instanceof CTimesRow));
     }
 
